--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -424,6 +424,11 @@ footer p {
     margin: 2px;
 }
 
+.image-preview {
+    max-width: 200px;
+    max-height: 200px;
+}
+
 .tag-container {
     display: flex;
     flex-direction: row;
