--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -43,8 +43,8 @@ Tickets
               <span>Posted on {{ ticket.created_at|date:"F j, Y" }} by </span>
               {% if request.user != ticket.author %}
               <span>{{ ticket.author }}</span>    
-              <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}" data-token="{{ csrf_token }}">
-                {% if user.followers_status %}
+              <button class="follow-btn icon-hover-box" data-user-id="{{ ticket.author.pk }}" data-url="{% url 'toggle_follow' ticket.author.pk %}" data-token="{{ csrf_token }}">
+                {% if ticket.author.followers_status %}
                   <i class="icon-user-minus"></i>
                 {% else %}
                   <i class="icon-user-plus"></i>
@@ -54,6 +54,7 @@ Tickets
               you
               {% endif %}
             </p>
+            {% if request.user != ticket.author %}
             <div class="like-container">
               <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
               <form id="like-form-{{ ticket.pk }}" method="post" action="{% url 'ticket_like' ticket.pk %}" class="like-block">
@@ -67,6 +68,7 @@ Tickets
                 <span class="dislikes-count">{{ ticket.dislikes_count }}</span>
               </form>
             </div>
+            {% endif %}
           </div>
           <ul class="item-infos reviews-list">
             {% for review in ticket.reviews.all %}
@@ -87,11 +89,12 @@ Tickets
                       {% endif %}
                     </h4>
                     <p><a class="item-infos" href="{% url 'review_detail' review.pk %}">{{ review.content }}</a></p>
-                    <p class="item-infos mini-font"><span>Posted on {{ review.created_at|date:"F j, Y" }} by </span>
+                    <p class="item-infos mini-font">
+                      <span>Posted on {{ review.created_at|date:"F j, Y" }} by </span>
                       {% if request.user != review.author %}
                       <span>{{ review.author }}</span>
-                      <button class="follow-btn icon-hover-box" data-user-id="{{ user.pk }}" data-url="{% url 'toggle_follow' user.pk %}" data-token="{{ csrf_token }}">
-                        {% if user.followers_status %}
+                      <button class="follow-btn icon-hover-box" data-user-id="{{ review.author.pk }}" data-url="{% url 'toggle_follow' review.author.pk %}" data-token="{{ csrf_token }}">
+                        {% if review.author.followers_status %}
                             <i class="icon-user-minus"></i>
                         {% else %}
                             <i class="icon-user-plus"></i>
